# sa-token-rs

./: .gitignore  AGENTS.md  CHANGELOG.md  Cargo.toml  README.md  ROADMAP.md  deny.toml  fenxi.md
crates/sa-token/: Cargo.toml
crates/sa-token-axum/: Cargo.toml
crates/sa-token-axum/src/: lib.rs
crates/sa-token-axum/tests/: axum_test.rs
crates/sa-token-core/: Cargo.toml
crates/sa-token-core/src/: annotation.rs  application.rs  config.rs  context.rs  dao.rs  error.rs  exception.rs  filter.rs  fun.rs  http.rs  http_auth.rs  json.rs  lib.rs  listener.rs  log.rs  manager.rs  model.rs  plugin.rs  router.rs  runtime.rs  sa_manager.rs  same.rs  secure.rs  serializer.rs  session.rs  stp.rs  strategy.rs  temp.rs  util.rs
crates/sa-token-core/src/annotation/: handler.rs  mod.rs  sa_check_disable.rs  sa_check_http_basic.rs  sa_check_http_digest.rs  sa_check_login.rs  sa_check_or.rs  sa_check_permission.rs  sa_check_role.rs  sa_check_safe.rs  sa_ignore.rs  sa_mode.rs
crates/sa-token-core/src/application/: application_info.rs  sa_application.rs  sa_get_value_interface.rs  sa_set_value_interface.rs
crates/sa-token-core/src/config/: log_level_coupling.rs  mod.rs  sa_cookie_config.rs  sa_token_config.rs  sa_token_config_factory.rs
crates/sa-token-core/src/context/: mock.rs  mod.rs  model.rs  sa_holder.rs  sa_token_context.rs  sa_token_context_default_impl.rs  sa_token_context_error.rs  sa_token_context_for_read_only.rs  sa_token_context_for_thread_local.rs  sa_token_context_for_thread_local_staff.rs
crates/sa-token-core/src/dao/: async_sa_token_dao.rs  auto.rs  mod.rs  sa_token_dao.rs  sa_token_dao_default_impl.rs  timed_cache.rs
crates/sa-token-core/src/error/: sa_error_code.rs
crates/sa-token-core/src/exception/: api_disabled_exception.rs  back_result_exception.rs  disable_service_exception.rs  firewall_check_exception.rs  invalid_context_exception.rs  mod.rs  not_http_basic_auth_exception.rs  not_http_digest_auth_exception.rs  not_impl_exception.rs  not_login_exception.rs  not_permission_exception.rs  not_role_exception.rs  not_safe_exception.rs  not_web_context_exception.rs  (+8 more)
crates/sa-token-core/tests/: annotation_contract_test.rs  context_exception_contract_test.rs  manager_listener_contract_test.rs  stp_wave1_test.rs  wave3_strategy_filter_http_auth_test.rs  wave4_contract_test.rs
crates/sa-token-dao-memory/: Cargo.toml
crates/sa-token-dao-memory/src/: lib.rs
crates/sa-token-dao-redis/: Cargo.toml
crates/sa-token-dao-redis/src/: lib.rs
crates/sa-token-dao/sa-token-dao-memory/: Cargo.toml
crates/sa-token-dao/sa-token-dao-moka/: Cargo.toml
crates/sa-token-dao/sa-token-dao-redis/: Cargo.toml
crates/sa-token-dao/sa-token-dao-redis-pool/: Cargo.toml
crates/sa-token-dao/sa-token-dao-sweeper/: Cargo.toml
crates/sa-token-demo/sa-token-demo-actix-alone-redis/: Cargo.toml
crates/sa-token-demo/sa-token-demo-actix-apikey/: Cargo.toml
crates/sa-token-demo/sa-token-demo-actix-async/: Cargo.toml
crates/sa-token-demo/sa-token-demo-actix-case/: Cargo.toml
crates/sa-token-demo/sa-token-demo-actix-device-lock/: Cargo.toml
crates/sa-token-demo/sa-token-demo-actix-jwt/: Cargo.toml
crates/sa-token-demo/sa-token-demo-actix-oauth2/: Cargo.toml
crates/sa-token-demo/sa-token-demo-actix-oauth2-client/: Cargo.toml
crates/sa-token-demo/sa-token-demo-actix-quick-login/: Cargo.toml
crates/sa-token-demo/sa-token-demo-actix-redis/: Cargo.toml
crates/sa-token-demo/sa-token-demo-actix-remember-me/: Cargo.toml
crates/sa-token-demo/sa-token-demo-actix-sign/: Cargo.toml
crates/sa-token-demo/sa-token-demo-actix-sse/: Cargo.toml
crates/sa-token-demo/sa-token-demo-actix-sso/: Cargo.toml
crates/sa-token-demo/sa-token-demo-actix-sso-client/: Cargo.toml
crates/sa-token-demo/sa-token-demo-actix-websocket/: Cargo.toml
crates/sa-token-demo/sa-token-demo-askama/: Cargo.toml
crates/sa-token-doc/: Cargo.toml  DOC_ADAPTATION.md  README.md  _sidebar.md  doc.html  index.html
crates/sa-token-doc/api/: stp-util.md
crates/sa-token-doc/fun/: auth-framework-function-test.md  sa-token-context.md  token-timeout.md
crates/sa-token-doc/micro/: dcs-session.md  same-token.md
crates/sa-token-doc/more/: blog.md  common-action.md  common-questions.md  content-cooperation.md  demand-commit.md  download-demos.md  join-group.md  link.md  sa-token-donate-old.md  sa-token-donate.md  tj-gzh-hz.md  tj-gzh.md  update-log.md  wenjuan.md
crates/sa-token-doc/oauth2/: oauth2-h5.md  oauth2-interworking.md  oauth2-openid.md  oauth2-server.md  readme.md
crates/sa-token-doc/plugin/: alone-redis.md  api-sign.md  quick-login.md
crates/sa-token-doc/pro/: st_doc_top.md  st_index_top.md  st_oauth2.md  st_sso.md
crates/sa-token-doc/src/: lib.rs
crates/sa-token-doc/sso/: readme.md  sso-custom-api.md  sso-diff-key.md  sso-nosdk.md  sso-pro.md  sso-server.md  sso-type1.md  sso-type2.md  sso-type3.md
crates/sa-token-doc/start/: download.md  example.md  maven-pull.md  new-version.md  solon-example.md  webflux-example.md
crates/sa-token-doc/static/: doc.css  docsify-plugin.js
crates/sa-token-doc/up/: basic-auth.md  disable.md  global-filter.md  global-listener.md  integ-redis.md  integ-spring-mongod-1.md  integ-spring-mongod-2.md  login-parameter.md  many-account.md  mock-person.md  mutex-login.md  not-cookie.md  password-secure.md  remember-me.md  safe-auth.md  search-session.md  token-prefix.md  token-style.md
crates/sa-token-doc/use/: at-check.md  config.md  dao-extend.md  jur-auth.md  kick.md  login-auth.md  route-check.md  session.md
crates/sa-token-test/: Cargo.toml  README.md
crates/sa-token-test/sa-token-easy-test/: Cargo.toml
crates/sa-token-test/sa-token-jackson3-test/: Cargo.toml
crates/sa-token-test/sa-token-json-test/: Cargo.toml
crates/sa-token-test/sa-token-jwt-test/: Cargo.toml
crates/sa-token-test/sa-token-serializer-test/: Cargo.toml
crates/sa-token-test/sa-token-springboot-test/: Cargo.toml
crates/sa-token-test/sa-token-temp-jwt-test/: Cargo.toml
crates/sa-token-test/tests/: login_test.rs  phase2_test.rs
crates/sa-token/src/: lib.rs
(+787 files in other folders)
