[workspace]
members = [
    "crates/sa-token",
    "crates/sa-token-axum",
    "crates/sa-token-core",
    "crates/sa-token-derive",
    "crates/sa-token-context-mock",
    "crates/sa-token-dao-memory",
    "crates/sa-token-dao-redis",
    "crates/sa-token-plugin/sa-token-jwt",
    "crates/sa-token-plugin/sa-token-sign",
    "crates/sa-token-demo/sa-token-demo-axum",
    "crates/sa-token-test",
]
resolver = "3"

[workspace.package]
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
license = "Apache-2.0"
repository = "https://github.com/dromara/sa-token-rs"

[workspace.dependencies]
sa-token = { path = "crates/sa-token" }
sa-token-axum = { path = "crates/sa-token-axum" }
sa-token-core = { path = "crates/sa-token-core" }
sa-token-derive = { path = "crates/sa-token-derive" }
sa-token-context-mock = { path = "crates/sa-token-context-mock" }
sa-token-dao-memory = { path = "crates/sa-token-dao-memory" }
sa-token-dao-redis = { path = "crates/sa-token-dao-redis" }
sa-token-jwt = { path = "crates/sa-token-plugin/sa-token-jwt" }
sa-token-sign = { path = "crates/sa-token-plugin/sa-token-sign" }

# 外部依赖
axum = { version = "0.7" }
axum-extra = { version = "0.9" }
tower = "0.5"
tower-http = { version = "0.6" }
http = "1"
async-trait = "0.1"
futures-util = "0.3"
urlencoding = "2"
tokio = { version = "1", features = ["full"] }
hyper = { version = "1" }
tower-util = "0.3"
redis = { version = "0.27", features = ["tokio-comp"] }

serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tracing = "0.1"
chrono = "0.4"
uuid = { version = "1", features = ["v4"] }
base64 = "0.22"
hex = "0.4"
sha2 = "0.10"
hmac = "0.12"
md-5 = "0.10"
rand = "0.8"
regex = "1"
url = "2"
proc-macro2 = "1"
quote = "1"
syn = { version = "2", features = ["full"] }

[workspace.lints.rust]
unsafe_code = "forbid"
missing_docs = "warn"

[workspace.lints.clippy]
all = "warn"
pedantic = "warn"
