[package]
name = "sa-token-axum"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Axum integration for sa-token-rs"

[dependencies]
sa-token-core.workspace = true
axum = { workspace = true, features = ["macros"] }
axum-extra = { workspace = true, features = ["cookie"] }
tower.workspace = true
tower-http = { workspace = true, features = ["cors"] }
http.workspace = true
async-trait.workspace = true
futures-util.workspace = true
urlencoding.workspace = true

[dev-dependencies]
sa-token.workspace = true
sa-token-dao-memory.workspace = true
sa-token-context-mock.workspace = true
tokio.workspace = true
hyper = { workspace = true, features = ["full"] }
tower-util.workspace = true

[lints]
workspace = true
