[package]
name = "sa-token-core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Core types and extension points for sa-token-rs"

[dependencies]
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tracing.workspace = true
async-trait.workspace = true
chrono.workspace = true
uuid.workspace = true
rand.workspace = true
regex.workspace = true
url.workspace = true
urlencoding.workspace = true
base64.workspace = true
sha1 = "0.10"
sha2.workspace = true
hmac.workspace = true
hex.workspace = true
md-5.workspace = true
bcrypt.workspace = true
aes = "0.8"
cbc = "0.1"
openssl.workspace = true

[dev-dependencies]
sa-token-context-mock.workspace = true
sa-token-dao-memory.workspace = true
tokio.workspace = true
serde_json.workspace = true

[lints]
workspace = true
