[package]
name = "sa-token-test"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Integration tests for sa-token-rs"

[dev-dependencies]
sa-token.workspace = true
sa-token-core.workspace = true
sa-token-context-mock.workspace = true
sa-token-dao-memory.workspace = true
serde_json.workspace = true

[lints]
workspace = true
