[package]
name = "sa-token-dao-redis-pool"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Redis DAO with connection pool for sa-token-rs (Java sa-token-jedis/sa-token-lettuce/sa-token-redisson equivalent)"

[dependencies]
sa-token-core.workspace = true
serde_json.workspace = true
redis.workspace = true
tokio.workspace = true
async-trait.workspace = true
futures-util.workspace = true

[dev-dependencies]
sa-token.workspace = true
sa-token-context-mock.workspace = true
tokio = { version = "1", features = ["macros", "rt-multi-thread", "time"] }

[lints]
workspace = true
