[package]
name = "sa-token-dao-redis"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Redis DAO implementation for sa-token-rs (based on redis-rs)"

[dependencies]
sa-token-core.workspace = true
serde_json.workspace = true
redis.workspace = true
tokio.workspace = true
async-trait.workspace = true
futures-util.workspace = true

[dev-dependencies]
sa-token.workspace = true
sa-token-context-mock.workspace = true
uuid.workspace = true

[lints]
workspace = true
