[package]
name = "sa-token-demo-actix-alone-redis"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Actix alone-redis demo"
publish = false

[[bin]]
name = "sa-token-demo-actix-alone-redis"
path = "src/main.rs"

[dependencies]
sa-token = { workspace = true, features = ["redis"] }
sa-token-dao-redis.workspace = true
sa-token-core.workspace = true
actix-web = { workspace = true, features = ["macros"] }
tokio.workspace = true
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
redis.workspace = true

[lints]
workspace = true
