[package]
name = "sa-token-demo-actix-device-lock"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Actix device-lock demo"
publish = false

[[bin]]
name = "sa-token-demo-actix-device-lock"
path = "src/main.rs"

[dependencies]
sa-token = { workspace = true, features = ["actix-web"] }
sa-token-dao-memory.workspace = true
sa-token-core.workspace = true
actix-web = { workspace = true, features = ["macros"] }
tokio.workspace = true
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true

[lints]
workspace = true
