[package]
name = "sa-token-demo-actix-jwt"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Actix JWT demo (Quarkus → actix, maps sa-token-demo-jwt)"
publish = false

[[bin]]
name = "sa-token-demo-actix-jwt"
path = "src/main.rs"

[dependencies]
sa-token = { workspace = true, features = ["actix-web", "jwt"] }
sa-token-web-actix.workspace = true
sa-token-dao-memory.workspace = true
sa-token-core.workspace = true
sa-token-jwt.workspace = true
actix-web = { workspace = true, features = ["macros"] }
tokio.workspace = true
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true

[lints]
workspace = true
