[package]
name = "sa-token-demo-actix-oauth2-client"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Actix OAuth2 client demo"
publish = false

[[bin]]
name = "sa-token-demo-actix-oauth2-client"
path = "src/main.rs"

[dependencies]
actix-web = { workspace = true, features = ["macros"] }
tokio.workspace = true
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
reqwest.workspace = true

[lints]
workspace = true
