[package]
name = "sa-token-demo-actix-oauth2"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Actix OAuth2 server demo (maps Java sa-token-demo-oauth2-server)"
publish = false

[[bin]]
name = "sa-token-demo-actix-oauth2"
path = "src/main.rs"

[dependencies]
sa-token = { workspace = true, features = ["actix-web"] }
sa-token-web-actix.workspace = true
sa-token-dao-memory.workspace = true
sa-token-core.workspace = true
sa-token-oauth2.workspace = true
actix-web = { workspace = true, features = ["macros"] }
tokio.workspace = true
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
uuid.workspace = true

[lints]
workspace = true
