[package]
name = "sa-token-demo-actix-redis"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Actix Redis demo (Quarkus → actix, maps springboot-redis)"
publish = false

[[bin]]
name = "sa-token-demo-actix-redis"
path = "src/main.rs"

[dependencies]
sa-token = { workspace = true, features = ["actix-web", "redis"] }
sa-token-web-actix.workspace = true
sa-token-dao-redis.workspace = true
sa-token-core.workspace = true
actix-web = { workspace = true, features = ["macros"] }
tokio.workspace = true
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
redis.workspace = true

[lints]
workspace = true
