[package]
name = "sa-token-demo-actix-sse"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Actix Server-Sent Events demo (login + SSE stream)"
publish = false

[[bin]]
name = "sa-token-demo-actix-sse"
path = "src/main.rs"

[dependencies]
sa-token.workspace = true
sa-token-dao-memory.workspace = true
sa-token-core.workspace = true
actix-web = { workspace = true, features = ["macros"] }
tokio.workspace = true
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
futures-util.workspace = true

[lints]
workspace = true
