[package]
name = "sa-token-demo-actix-sso-client"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Actix SSO client demo (Mode3)"
publish = false

[[bin]]
name = "sa-token-demo-actix-sso-client"
path = "src/main.rs"

[dependencies]
sa-token = { workspace = true, features = ["actix-web"] }
sa-token-dao-memory.workspace = true
sa-token-core.workspace = true
sa-token-sso.workspace = true
sa-token-sign.workspace = true
actix-web = { workspace = true, features = ["macros"] }
tokio.workspace = true
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
reqwest.workspace = true

[lints]
workspace = true
