[package]
name = "sa-token-demo-actix-websocket"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Actix login + WebSocket demo (maps Java sa-token-demo-websocket)"
publish = false

[[bin]]
name = "sa-token-demo-actix-websocket"
path = "src/main.rs"

[dependencies]
sa-token = { workspace = true, features = ["actix-web"] }
sa-token-web-actix.workspace = true
sa-token-dao-memory.workspace = true
sa-token-core.workspace = true
actix-web = { workspace = true, features = ["macros"] }
actix-ws = "0.3"
tokio.workspace = true
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true

[lints]
workspace = true
